--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -3,8 +3,9 @@
 
 // Đặt biến
 :root {
-  --primary: #fe2c55;
+  --primary: rgb(254, 44, 85);
   --black: #000;
+  --white: #fff;
   --text-color: #333;
 
   // Default layout
