--- a/src/components/Popper/Menu/Menu.module.scss
+++ b/src/components/Popper/Menu/Menu.module.scss
@@ -1,7 +1,6 @@
 // Menu wrapper
 .menu-list {
-  // width: 224px;
-  width: 230px;
+  width: 224px;
 
   // Lấy được ưu tiên cao hơn
   .menu-item {
@@ -13,15 +12,40 @@
   padding-bottom: 8px;
 }
 
+// Menu item
 .menu-item {
   width: 100%; // tự thêm
   font-family: 'Poppins', Arial;
   justify-content: start;
+  border: none; // tự thêm
   border-radius: 0;
   font-weight: 500; // tự thêm
-  padding: 11px 16px;
+  padding: 12px 16px; // 11px 16px
+  line-height: 1.8rem;
 
   &:hover {
     background-color: rgb(22 24 35 / 3%);
   }
+}
+
+// Header
+.header {
+  position: relative;
+  height: 50px;
+  margin-top: -8px;
+}
+
+.back-btn {
+  width: 50px;
+  // Bằng thằng chứa nó
+  height: 100%;
+  background-color: transparent;
+  cursor: pointer;
+}
+
+.header-title {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
