Xây Dựng UI Phần Header Dự Án Tiktok Clone (Phần 6)

--- a/src/components/Layout/components/Header/Header.module.scss
+++ b/src/components/Layout/components/Header/Header.module.scss
@@ -103,7 +103,7 @@
   }
 }
 
-// Tự thêm (UI HEADER #4)
+// Actions
 .actions {
   display: flex;
   align-items: center;
@@ -114,5 +114,22 @@
   margin-left: 28px;
   padding: 4px 8px;
   background-color: transparent;
+  cursor: pointer;
+}
+
+.action-btn {
+  font-size: 2.2rem;
+  color: #161823;
+  background-color: transparent;
+  padding: 4px 12px;
+  cursor: pointer;
+}
+
+.user-avatar {
+  width: 32px;
+  height: 32px;
+  object-fit: cover;
+  border-radius: 50%;
+  margin-left: 12px;
   cursor: pointer;
 }
