--- a/src/components/Popper/Menu/Menu.module.scss
+++ b/src/components/Popper/Menu/Menu.module.scss
@@ -23,6 +23,10 @@
   padding: 12px 16px; // 11px 16px
   line-height: 1.8rem;
 
+  &.separate {
+    border-top: 1px solid rgb(22 24 35 / 12%);
+  }
+
   &:hover {
     background-color: rgb(22 24 35 / 3%);
   }
